Closed Bug 932364 Opened 11 years ago Closed 11 years ago

Fix an exact rooting hazard across AddSizeOfTab

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: terrence, Assigned: terrence)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

This fixes the hazard by handlifying AddSizeOfTab.
Attachment #824097 - Flags: review?(n.nethercote)
Assignee: general → terrence
Status: NEW → ASSIGNED
Comment on attachment 824097 [details] [diff] [review] hazard_addsizeoftab-v0.diff Review of attachment 824097 [details] [diff] [review]: ----------------------------------------------------------------- I should have thought of that. Thanks!
Attachment #824097 - Flags: review?(n.nethercote) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: