Bug 932364 - Fix an exact rooting hazard around AddSizeOfTab; r=njn